# sifi-bridge-py

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: download_memory.py  download_serial.py  download_to_csv.py  latency_test.py  lsl_plot.py  visualize_emg.py
sifi_bridge_py/: __init__.py  sifi_bridge.py  utils.py
sifibridge-bin/: pyproject.toml
sifibridge-bin/.github/workflows/: release.yml
sifibridge-bin/scripts/: build_wheels.py
sifibridge-bin/sifibridge_bin/: __init__.py
tests/: test.py
