[project]
name = "sifi-bridge-py"
# https://packaging.python.org/en/latest/specifications/version-specifiers/#pre-release-separators
version = "2.0.0-b9"
description = "Python bindings for the SiFi Bridge tool."
authors = [{ name = "SiFi Labs", email = "gabrielg@sifilabs.com" }]
dependencies = ["numpy", "packaging>=24.0", "sifibridge-bin>=2.0.0b8"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
urls = { repository = "https://github.com/SiFiLabs/sifi-bridge-py" }

[project.optional-dependencies]
examples = [
  "matplotlib>=3.9.2",
  "pylsl>=1.16.2",
  "PySide6>=6.7.2",
  "pyqtgraph>=0.13.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
sifibridge-bin = { path = "./sifibridge-bin" }
