[project]
name = "sifibridge-bin"
version = "2.0.0b8"
description = "Platform-specific binary distribution of the SiFi Bridge CLI."
authors = [{ name = "SiFi Labs", email = "gabrielg@sifilabs.com" }]
requires-python = ">=3.9"
license = { text = "MIT" }
urls = { repository = "https://github.com/SiFiLabs/sifi-bridge-py" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["sifibridge_bin/bin/*"]

[tool.hatch.build.targets.wheel]
packages = ["sifibridge_bin"]
